--- a/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.html
+++ b/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.html
@@ -22,23 +22,24 @@
       <!--Email-->
       <mat-form-field appearance="fill">
         <mat-label for="emailInput">Email Address</mat-label>
-        <mat-icon matPrefix class="prefix-icon" aria-hidden="true"
-          >mail</mat-icon
-        >
+        <mat-icon matPrefix class="prefix-icon" aria-hidden="true">
+          mail
+        </mat-icon>
         <input
           matInput
           type="email"
           formControlName="email"
           autocomplete="email"
+          maxlength="254"
           id="emailInput"
           aria-required="true"
           aria-describedby="emailErrors" />
         @if (email?.errors?.['required']) {
         <mat-error id="emailErrors">Email is required.</mat-error>
         } @if (email?.errors?.['email']) {
-        <mat-error id="emailErrors"
-          >Please enter a valid email address.</mat-error
-        >
+        <mat-error id="emailErrors">
+          Please enter a valid email address.
+        </mat-error>
         }
       </mat-form-field>
 
@@ -54,7 +55,7 @@
           formControlName="password"
           autocomplete="current-password"
           minlength="8"
-          maxlength="40"
+          maxlength="128"
           id="passwordInput"
           aria-required="true"
           aria-describedby="passwordErrors" />
@@ -71,14 +72,9 @@
         </button>
         } @if (password?.errors?.['required']) {
         <mat-error id="passwordErrors">Password is required.</mat-error>
-        } @if (password?.errors?.['minlength']) {
-        <mat-error id="passwordErrors"
-          >Password must be at least 8 characters.</mat-error
-        >
-        } @if (password?.errors?.['maxlength']) {
-        <mat-error id="passwordErrors"
-          >Password cannot exceed 40 characters.</mat-error
-        >
+        } @if (password?.errors?.['minlength'] ||
+        password?.errors?.['maxlength']) {
+        <mat-error id="passwordErrors">Invalid password.</mat-error>
         }
       </mat-form-field>
 
