--- a/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.scss
+++ b/frontend/src/app/core/components/faculty/load-and-schedule/load-and-schedule.component.scss
@@ -15,6 +15,10 @@
     $gap: var(--spacing-md)
   );
   height: 100%;
+
+  @media screen and (max-width: bp.$breakpoint-sm) {
+    padding-bottom: var(--spacing-4xl);
+  }
 }
 
 .row-one {
