add offline status detection display on UI

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -22,6 +22,7 @@
   --neutral-border: #0000002f;
 
   /* Primary colors variations */
+  --primary-const: #800000;
   --primary-one: #800000;
   --primary-two: #a93232;
   --primary-fade: #80000020;
@@ -113,12 +114,14 @@
   --neutral-border: #c7c5c55c;
 
   /* Primary colors variations */
+  --primary-const: #800000;
   --primary-one: #a93232;
   --primary-two: #9e2525;
   --primary-fade: #a932321a;
   --primary-text: #e15d5d;
   --primary-text-lighter: #f08383;
   --primary-hover: #2b2121;
+
   --primary-warning: #ffb4ab;
 
   --primary-one-fade: #c62f2f31;
