add "Forgot Password?" link to change password dialog

--- a/frontend/src/app/shared/dialog-change-password/dialog-change-password.component.html
+++ b/frontend/src/app/shared/dialog-change-password/dialog-change-password.component.html
@@ -48,6 +48,7 @@
 
 
 
+
         }}.</mat-error
       >
       }
@@ -108,6 +109,13 @@
       <mat-error>Password confirmation is required.</mat-error>
       }
     </mat-form-field>
+
+    <!-- Forgot Password Link -->
+    <div class="forgot-password-container">
+      <a class="forgot-password-link" (click)="onForgotPassword()">
+        Forgot Password?
+      </a>
+    </div>
 
     <div class="dialog-change-password-actions">
       <!-- Cancel Button -->
