refactor password validation in reset password component

--- a/frontend/src/app/auth/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/reset-password/reset-password.component.html
@@ -39,13 +39,13 @@
         type="button"
         (click)="togglePasswordVisibility()"
         [attr.aria-label]="showPassword ? 'Hide password' : 'Show password'">
-        <mat-icon>{{ showPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+        <mat-icon>{{
+          showPassword ? 'visibility_off' : 'visibility'
+        }}</mat-icon>
       </button>
-      }
-      @if (password?.errors?.['required'] && password?.touched) {
+      } @if (password?.errors?.['required'] && password?.touched) {
       <mat-error>Password is required</mat-error>
-      }
-      @if (password?.errors?.['minlength']) {
+      } @else if (password?.errors?.['minlength']) {
       <mat-error>Password must be at least 8 characters</mat-error>
       }
     </mat-form-field>
@@ -64,15 +64,18 @@
         matSuffix
         type="button"
         (click)="toggleConfirmPasswordVisibility()"
-        [attr.aria-label]="showConfirmPassword ? 'Hide password' : 'Show password'">
-        <mat-icon>{{ showConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+        [attr.aria-label]="
+          showConfirmPassword ? 'Hide password' : 'Show password'
+        ">
+        <mat-icon>{{
+          showConfirmPassword ? 'visibility_off' : 'visibility'
+        }}</mat-icon>
       </button>
-      }
-      @if (passwordConfirmation?.errors?.['required'] && passwordConfirmation?.touched) {
-      <mat-error>Please confirm your password</mat-error>
-      }
-      @if (resetForm.errors?.['passwordMismatch']) {
+      } @if (passwordConfirmation?.errors?.['passwordMismatch']) {
       <mat-error>Passwords do not match</mat-error>
+      } @else if (passwordConfirmation?.errors?.['required'] &&
+      passwordConfirmation?.touched) {
+      <mat-error>Please confirm your password</mat-error>
       }
     </mat-form-field>
 
