--- a/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.html
+++ b/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.html
@@ -78,6 +78,13 @@
         }
       </mat-form-field>
 
+      <!-- Forgot Password Link -->
+      <div class="forgot-password-container">
+        <a class="forgot-password-link" (click)="onForgotPassword()">
+          Forgot Password?
+        </a>
+      </div>
+
       <!--Actions-->
       <div class="dialog-login-actions">
         <button
