--- a/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.scss
+++ b/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.scss
@@ -70,6 +70,43 @@
   }
 }
 
+.forgot-password-container {
+  text-align: right;
+
+  .forgot-password-link {
+    color: var(--primary-text);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: var(--font-size-sm);
+    position: relative;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .forgot-password-link::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1.5px;
+    bottom: 0;
+    left: 0;
+
+    background-color: var(--primary-text);
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.5s ease;
+    backface-visibility: hidden;
+    -webkit-font-smoothing: antialiased;
+    will-change: transform;
+  }
+
+  .forgot-password-link:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+}
+
 // =================
 // Dialog Actions
 // =================
