--- a/frontend/src/app/shared/dialog-change-password/dialog-change-password.component.html
+++ b/frontend/src/app/shared/dialog-change-password/dialog-change-password.component.html
@@ -14,8 +14,7 @@
   <form
     class="dialog-change-password-form"
     [formGroup]="passwordForm"
-    (ngSubmit)="onSubmit()"
-    [@fadeAnimation]>
+    (ngSubmit)="onSubmit()">
     <!-- Current Password -->
     <mat-form-field appearance="fill">
       <mat-label>Current Password</mat-label>
@@ -44,6 +43,7 @@
       } @if (passwordForm.get('currentPassword')?.errors?.['serverError']) {
       <mat-error
         >{{passwordForm.get('currentPassword')?.errors?.['serverError']
+
 
 
 
