--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.scss
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.scss
@@ -1,6 +1,6 @@
 @use "../../../../../../styles/mixins";
 
-.hris-status-banner {
+.fesr-status-banner {
   @include mixins.flex-layout(
     $align: center,
     $justify: center,
