--- a/frontend/src/app/auth/callback/access-denied-dialog/access-denied-dialog.component.html
+++ b/frontend/src/app/auth/callback/access-denied-dialog/access-denied-dialog.component.html
@@ -8,7 +8,7 @@
   <div class="content">
     <!-- Primary Message -->
     <p class="message">
-      You've chosen not to authorize PUPT-FLSS to access your PUP-HRIS data.
+      You've chosen not to authorize PUPT-FLSS to access your PUP-FESR data.
     </p>
     <p class="message">
       Without this authorization, you won't be able to proceed with the Faculty
