revamp superadmin main component ui with added change password feature

--- a/frontend/src/app/core/components/faculty/faculty-main/faculty-main.component.html
+++ b/frontend/src/app/core/components/faculty/faculty-main/faculty-main.component.html
@@ -77,7 +77,7 @@
         matRipple
         class="bottom-sheet-item"
         (click)="onBottomSheetAction('change-password')">
-        <span mat-symbol="key"></span>
+        <span mat-symbol="lock"></span>
         Change Password
       </div>
       <div
@@ -155,7 +155,7 @@
         matRipple
         class="mobile-dropdown-item"
         (click)="openChangePasswordDialog()">
-        <span mat-symbol="key"></span>
+        <span mat-symbol="lock"></span>
         Change Password
       </button>
       <button
