--- a/frontend/src/app/shared/dialog-change-password/dialog-change-password.component.html
+++ b/frontend/src/app/shared/dialog-change-password/dialog-change-password.component.html
@@ -2,7 +2,7 @@
   <!-- Title -->
   <div class="dialog-change-password-title">
     <div class="title-text" id="dialogTitle">
-      <span mat-symbol="key" class="password-icon" aria-hidden="true"> </span>
+      <span mat-symbol="lock" class="password-icon" aria-hidden="true"> </span>
       <span>Change Password</span>
     </div>
     <p class="title-desc">
