refactor reports component to use dynamic tab configuration

--- a/frontend/src/app/core/components/admin/reports/reports.component.html
+++ b/frontend/src/app/core/components/admin/reports/reports.component.html
@@ -3,6 +3,7 @@
     <router-outlet></router-outlet>
   </div>
   <mat-tab-group
+    [(selectedIndex)]="selectedTabIndex"
     animationDuration="250ms"
     (selectedTabChange)="onTabChange($event)"
     class="reports-tab"
