--- a/frontend/src/app/core/components/admin/reports/reports.component.html
+++ b/frontend/src/app/core/components/admin/reports/reports.component.html
@@ -7,31 +7,16 @@
     animationDuration="250ms"
     (selectedTabChange)="onTabChange($event)"
     class="reports-tab"
-    headerPosition="below"
-  >
+    headerPosition="below">
+    @for (tab of tabs; track tab) {
     <mat-tab>
       <ng-template mat-tab-label>
         <div class="tab-label">
-          <span mat-symbol="person"></span>
-          Faculty
+          <span mat-symbol="{{ tab.icon }}"></span>
+          {{ tab.label }}
         </div>
       </ng-template>
     </mat-tab>
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <div class="tab-label">
-          <span mat-symbol="school"></span>
-          Programs
-        </div>
-      </ng-template>
-    </mat-tab>
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <div class="tab-label">
-          <span mat-symbol="meeting_room"></span>
-          Rooms
-        </div>
-      </ng-template>
-    </mat-tab>
+    }
   </mat-tab-group>
 </div>
