--- a/frontend/src/app/shared/table-header/table-header.component.scss
+++ b/frontend/src/app/shared/table-header/table-header.component.scss
@@ -1,4 +1,5 @@
-@use "../../../styles/mixins";
+@use '../../../styles/mixins';
+@use '../../../styles/breakpoints' as bp;
 
 :host {
   @include mixins.custom-spinner($color: white);
@@ -11,16 +12,15 @@
 
   .input-container {
     @include mixins.flex-layout($gap: var(--spacing-md));
+    flex-wrap: wrap;
 
     .search-field {
       width: auto;
-      min-width: 20rem;
       flex: 1;
     }
 
     .program-field {
       width: auto;
-      min-width: 20rem;
       flex: 2;
     }
 
@@ -43,7 +43,6 @@
     }
 
     .academic-year-field {
-      min-width: 20rem;
       flex: 1;
     }
   }
@@ -115,7 +114,7 @@
 // MEDIA QUERIES
 // ==============
 
-@media screen and (max-width: 1275px) {
+@media screen and (max-width: bp.$breakpoint-lgx) {
   .header-container {
     @include mixins.flex-layout(
       $direction: column,
