update admin main component to use dynamic account name

--- a/frontend/src/app/core/components/admin/admin-main/admin-main.component.html
+++ b/frontend/src/app/core/components/admin/admin-main/admin-main.component.html
@@ -117,7 +117,7 @@
               class="profile-icon" />
           </div>
           <div class="account-text">
-            <div class="account-name">Juan Santos Dela Cruz</div>
+            <div class="account-name">{{ accountName }}</div>
             <div class="account-role">{{ accountRole }}istrator</div>
           </div>
         </div>
