add icons and improve styling for superadmin navigation and table header

--- a/frontend/src/app/core/components/superadmin/superadmin-main/superadmin-main.component.html
+++ b/frontend/src/app/core/components/superadmin/superadmin-main/superadmin-main.component.html
@@ -23,7 +23,10 @@
     <mat-nav-list class="navbar-list">
       <div class="navbar-group-one">
         <div class="group">
-          <h4 class="list-subheader">Management</h4>
+          <h4 class="list-subheader">
+            <span mat-symbol="manage_accounts"></span>
+            Management
+          </h4>
           <a
             mat-list-item
             class="list-item"
@@ -43,7 +46,10 @@
         </div>
 
         <div class="group">
-          <h4 class="list-subheader">Maintenance</h4>
+          <h4 class="list-subheader">
+            <span mat-symbol="settings"></span>
+            Maintenance
+          </h4>
           <a
             mat-list-item
             class="list-item"
