--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -76,7 +76,7 @@
         [disabled]="buttonDisabled"
         [ngClass]="{ 'disabled-button': buttonDisabled }">
         <mat-icon>picture_as_pdf</mat-icon>
-        Export to PDF
+        <span>Export to PDF</span>
       </button>
     </span>
     }
