--- a/frontend/src/app/core/components/superadmin/superadmin-main/superadmin-main.component.scss
+++ b/frontend/src/app/core/components/superadmin/superadmin-main/superadmin-main.component.scss
@@ -1,5 +1,5 @@
-@use "../../../../../styles/mixins";
-@use "../../../../../styles/breakpoints" as bp;
+@use '../../../../../styles/mixins';
+@use '../../../../../styles/breakpoints' as bp;
 
 * {
   @include mixins.reset-styles;
@@ -8,7 +8,6 @@
 .sidenav-container {
   height: 100%;
   background-color: var(--main-bg);
-  @include mixins.default-transition;
 }
 
 .sidenav {
@@ -59,6 +58,17 @@
         font-weight: 500;
         color: var(--primary-text);
         padding: 0 var(--spacing-md) var(--spacing-xs) var(--spacing-md);
+        @include mixins.flex-layout(
+          $direction: row,
+          $align: center,
+          $justify: flex-start,
+          $gap: var(--spacing-xs)
+        );
+
+        span[mat-symbol] {
+          color: var(--primary-text);
+          font-size: var(--font-size-lg);
+        }
       }
 
       .list-item {
@@ -233,7 +243,6 @@
           border-radius: var(--border-radius-xl);
           padding: 0 var(--spacing-md) 0 var(--spacing-xs);
           margin: 2px 0;
-
 
           .account-text {
             text-align: left;
