add logo maintenance feature and integrate with the existing university logo usage

--- a/frontend/src/app/core/components/superadmin/superadmin-main/superadmin-main.component.html
+++ b/frontend/src/app/core/components/superadmin/superadmin-main/superadmin-main.component.html
@@ -82,6 +82,14 @@
             <span mat-symbol="meeting_room" matListItemIcon></span>
             <span matListItemTitle>Rooms</span>
           </a>
+          <a
+            mat-list-item
+            class="list-item"
+            routerLink="/superadmin/logos"
+            routerLinkActive="active-link">
+            <span mat-symbol="image" matListItemIcon></span>
+            <span matListItemTitle>Logos</span>
+          </a>
         </div>
       </div>
 
