--- a/frontend/src/app/core/components/superadmin/maintenance/logos/logos.component.scss
+++ b/frontend/src/app/core/components/superadmin/maintenance/logos/logos.component.scss
@@ -11,6 +11,7 @@
   gap: var(--spacing-md);
   margin: 0 auto;
   width: 100%;
+  max-height: 50dvh;
 }
 
 .logo-card {
@@ -21,7 +22,7 @@
     $gap: var(--spacing-sm)
   );
   @include mixins.default-transition;
-  height: fit-content;
+  height: 100%;
   width: 100%;
   background-color: var(--neutral-light);
 
@@ -46,11 +47,12 @@
 }
 
 .logo-content {
-  min-height: 10rem;
+  height: 100%;
 
   /* No logo */
   .no-logo {
     @include mixins.flex-layout($direction: column, $gap: var(--spacing-sm));
+    min-height: 10rem;
     height: 100%;
     background: var(--neutral-extra);
     border-radius: var(--border-radius-md);
